--- a/style.css
+++ b/style.css
@@ -38,6 +38,12 @@ html,body{
     overflow: hidden;
     text-align: center;
     z-index: 2;
+
+    -webkit-user-select: text; /* Safari 3.1+ */
+    -moz-user-select: text; /* Firefox 2+ */
+    -ms-user-select: text; /* IE 10+ */
+    user-select: text; /* Standard syntax */
+    
 }
 
 canvas{
