--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html,body{
 #container{
     position: relative;
     width: 100%;
-    height: auto;
+    height: 600px;
     max-width: 752px;
     margin: 0 auto;
     overflow: hidden;
@@ -20,7 +20,6 @@ html,body{
     display: none;
     outline: none;
     border: none;
-
     background: none;
     border: 1px solid #97b2d8;
     resize: none;
