--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ html,body{
 #container{
     position: relative;
     width: 100%;
-    height: 600px;
-    max-width: 752px;
+    height: auto;
+    max-width: 640px;
     margin: 0 auto;
     overflow: hidden;
 }
